Fixes #4 Upgrading to Java 16