@@ -7,8 +7,8 @@ plugins {
 
 group = 'com.docutools'
 version = '1.1.2'
-sourceCompatibility = 15
-targetCompatibility = 15
+sourceCompatibility = 16
+targetCompatibility = 16
 
 configurations {
     compileOnly {
@@ -48,18 +48,12 @@ publishing {
 }
 
 dependencies {
-    compileOnly 'org.projectlombok:lombok:1.18.12'
-    annotationProcessor 'org.projectlombok:lombok:1.18.12'
-    testImplementation('org.junit.jupiter:junit-jupiter:5.6.0')
-    testImplementation("org.hamcrest:hamcrest:2.2")
-
     implementation("org.apache.poi:poi:4.1.2")
     implementation("org.apache.poi:poi-ooxml:4.1.2")
     implementation("org.apache.poi:poi-ooxml-schemas:4.1.2")
-}
 
-tasks.withType(JavaCompile) {
-    options.compilerArgs += "--enable-preview"
+    testImplementation('org.junit.jupiter:junit-jupiter:5.6.0')
+    testImplementation("org.hamcrest:hamcrest:2.2")
 }
 
 java {
@@ -67,7 +61,6 @@ java {
 }
 
 test {
-    jvmArgs '--enable-preview'
     useJUnitPlatform()
 }
 
